--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quiz-game",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://norbertaz.github.io/quiz",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -34,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
