--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "quiz-game",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://norbertaz.github.io/quiz",
+  "homepage": "https://norbertaz.github.io/Quiz",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
